# netbox-vcenter

./: README.md  setup.cfg
netbox_vcenter/: __init__.py  background_tasks.py  forms.py  models.py  navigation.py  template_content.py  urls.py  validators.py  views.py
netbox_vcenter/management/commands/: update_vcenter_cache.py
netbox_vcenter/migrations/: 0001_initial.py  0002_auto_20200403_0215.py
netbox_vcenter/templates/netbox_vcenter/cluster/: vcenter_info.html
netbox_vcenter/templates/netbox_vcenter/virtualmachine/: vcenter_refresh.html  vcenter_resources.html
