[metadata]
name = netbox-vcenter
version = attr: netbox_vcenter.VERSION
description = vCenter integration for NetBox
long_description = file: README.md
author = Sander Steffann
author_email = sander@steffann.nl
url = https://github.com/sjm-steffann/netbox-vcenter
license = Apache 2.0
license_file = LICENSE.txt
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 3.0
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    pyvmomi ~= 6.7.0

[options.package_data]
netbox_vcenter =
    static/netbox_vcenter/*.css
    templates/*.html
    templates/*/*.html
    templates/*/*/*.html
    templates/*/*/*/*.html
